--- a/composer.json
+++ b/composer.json
@@ -22,14 +22,14 @@
     },
     "autoload": {
         "psr-4": {
-            "KamranAhmed\\LaravelCensor\\": "src/"
+            "ITwrx\\LaravelCensor\\": "src/"
         }
     },
     "minimum-stability": "stable",
     "extra": {
     "laravel": {
         "providers": [
-            "KamranAhmed\\LaravelCensor\\LaravelCensorServiceProvider"
+            "ITwrx\\LaravelCensor\\LaravelCensorServiceProvider"
         ]        
     }
 }
